<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_the_service_rendered">How was the service Rendered</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)</string>
    <string name="round_up_tip">Round Up Tip?</string>
    <string name="tip_result">Tip Result</string>
    <string name="calculate">Calculate</string>
    <string name="Tip_amount">Tip Amount: %s</string>
</resources>